<resources>
    <string name="app_name">VinsolAssignment</string>
    <string name="sample_date_text">24/12/1995</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="no_meetings_scheduled">No Meetings Scheduled</string>
    <string name="back">Back</string>
    <string name="schedule_a_meeting">SCHEDULE A MEETING</string>
    <string name="meeting_date">Meeting Date: </string>
    <string name="sample_start_time">12:00</string>
    <string name="sample_end_time">13:00</string>
    <string name="end_time">End Time:</string>
    <string name="start_time">Start Time:</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
</resources>
